--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-instagram-embed": "^3.0.0",
     "react-router-dom": "^6.22.3",
     "react-social-media-embed": "^2.5.13",
     "swiper": "^11.1.1"
