--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^5.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-social-media-embed": "^2.5.13",
     "swiper": "^11.1.1"
