--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.1.0",
     "react-quill": "^2.0.0",
