--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "react-icons": "^5.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
     "react-social-media-embed": "^2.5.13",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
