--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@loadable/component": "^5.16.4",
     "axios": "^1.6.8",
     "countries-list": "^3.1.0",
     "jsonwebtoken": "^9.0.2",
