--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "@loadable/component": "^5.16.4",
     "axios": "^1.6.8",
     "countries-list": "^3.1.0",
+    "firebase": "^10.12.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.1.0",
