--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,11 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@loadable/component": "^5.16.4",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "axios": "^1.6.8",
     "countries-list": "^3.1.0",
     "firebase": "^10.12.2",
@@ -26,9 +30,11 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.1.0",
     "react-quill": "^2.0.0",
+    "react-razorpay": "^2.0.1",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "react-social-media-embed": "^2.5.13",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.1"
   },
